--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -15,7 +15,7 @@
     <nav>
       <ul>
         {
-          "astro,x".split(",").map((item) => (
+          "island,qwik".split(",").map((item) => (
             <li>
               <a href={`/${item}`}>{item}</a>
             </li>
