--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -24,7 +24,7 @@
       <nav>
         <ul class="list-disc pl-6">
           {
-            "island,qwik".split(",").map((item) => (
+            "island,alpine,qwik".split(",").map((item) => (
               <li>
                 <a href={`/${item}`}>{item}</a>
               </li>
