--- a/astro/src/pages/alpine.astro
+++ b/astro/src/pages/alpine.astro
@@ -36,7 +36,7 @@ st.body = st.body.map((bl: any) => {
   </style>
   <body>
     <header class="flex justify-between px-8 py-2">
-      <a href="#" class="text-2xl font-bold"> Alpine Demo</a>
+      <a href="/" class="text-2xl font-bold"> Alpine Demo</a>
       <a href="#" class="font-mono"> Profile</a>
     </header>
     <main>
