--- a/astro/src/astro-sb/feature.astro
+++ b/astro/src/astro-sb/feature.astro
@@ -11,7 +11,9 @@ interface Props {
 const { blok } = Astro.props;
 ---
 
-<div class="feature rounded-xl bg-white text-black p-6">
+<div
+  class="feature rounded-xl bg-white text-black p-6 border-4 border-transparent"
+>
   <h2 class="text-2xl font-bold mb-2">Feature</h2>
   <p class="italic">{blok.name}</p>
 </div>
