--- a/astro/src/astro-sb/grid-alpine.astro
+++ b/astro/src/astro-sb/grid-alpine.astro
@@ -27,13 +27,20 @@ const { blok } = Astro.props;
     border-color: red;
   }
 </style>
-<div x-data="{count:0}">
+<script is:inline>
+document.addEventListener("alpine:init", () => {
+  Alpine.data("carousel", () => ({
+    count: 0,
+    next() {
+      this.count = (this.count + 1) % 3;
+    },
+  }));
+});
+</script>
+<div x-data="carousel">
   <div class="px-6 max-w-[1400px] mx-auto mb-8">
     <span x-text="`Carousel item : ${count}`"></span>
-    <button
-      class="ml-8 bg-white text-black rounded-md px-2 py-1"
-      @click="count = (count+1)%3"
-    >
+    <button class="ml-8 bg-white text-black rounded-md px-2 py-1" @click="next">
       Next
     </button>
   </div>
