--- a/astro/src/astro-sb/teaser-alpine.astro
+++ b/astro/src/astro-sb/teaser-alpine.astro
@@ -10,12 +10,12 @@ const { blok } = Astro.props;
 ---
 
 <div class="teaser" x-data="{show:false}">
-  <h1 class="mt-20 font-bold flex flex-col items-center">
+  <h1
+    class="h-[min(50vh,800px)] font-bold flex flex-col items-center justify-center"
+  >
     <span class="text-4xl block underline pr-4 mb-4">TEASER</span>
     <div class="flex flex-col items-center">
-      <button @click="show = !show">
-        <span x-text="show ? 'hide' : 'reveal'"></span>
-      </button>
+      <button @click="show = !show" x-text="show ? 'hide' : 'reveal'"> </button>
       <div class="hidden" :style="`display: ${show ? 'block' : 'none'}`">
         <span class="text-xs font-normal leading-none">{blok.headline}</span>
       </div>
