--- a/astro/src/astro-sb/teaser.astro
+++ b/astro/src/astro-sb/teaser.astro
@@ -12,7 +12,9 @@ const { blok } = Astro.props;
 ---
 
 <div class="teaser">
-  <h1 class="mt-20 font-bold flex flex-col items-center">
+  <h1
+    class="h-[min(50vh,800px)] font-bold flex flex-col items-center justify-center"
+  >
     <span class="text-4xl block underline pr-4 mb-4">TEASER</span>
     <RTeaser client:idle>
       <span class="text-xs font-normal leading-none">{blok.headline}</span>
