--- a/astro/src/astro-sb/teaser-alpine.astro
+++ b/astro/src/astro-sb/teaser-alpine.astro
@@ -17,7 +17,9 @@ const { blok } = Astro.props;
     <div class="flex flex-col items-center">
       <button @click="show = !show" x-text="show ? 'hide' : 'reveal'"> </button>
       <div class="hidden" :style="`display: ${show ? 'block' : 'none'}`">
-        <span class="text-xs font-normal leading-none">{blok.headline}</span>
+        <span class="text-xs font-normal leading-none absolute"
+          >{blok.headline}</span
+        >
       </div>
     </div>
   </h1>
