--- a/astro/src/pages/index.astro
+++ b/astro/src/pages/index.astro
@@ -17,16 +17,21 @@
     }
   </style>
   <body>
-    <div class="x">
+    <div class="m-20">
       <header>
-        <h1>Cms demo</h1>
+        <h1 class="text-3xl mb-6">Cms demo</h1>
       </header>
       <nav>
-        <ul class="list-disc pl-6">
+        <ul class="text-xl flex gap-8">
           {
             "island,alpine,qwik".split(",").map((item) => (
               <li>
-                <a href={`/${item}`}>{item}</a>
+                <a
+                  href={`/${item}`}
+                  class=" px-4 py-2 border border-white rounded-xl"
+                >
+                  {item}
+                </a>
               </li>
             ))
           }
