--- a/astro/src/pages/alpine.astro
+++ b/astro/src/pages/alpine.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 import Switcher from "../astro-sb/switcher.astro";
 import StoryblokClient from "storyblok-js-client";
 
@@ -28,6 +29,7 @@ st.body = st.body.map((bl: any) => {
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alpine Demo</title>
+    <ViewTransitions />
     <script
       defer
       src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
