--- a/astro/src/pages/island.astro
+++ b/astro/src/pages/island.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 import Switcher from "../astro-sb/switcher.astro";
 import StoryblokClient from "storyblok-js-client";
 
@@ -21,13 +22,15 @@ if (resp.data.story.content?.body?.[0]?.headline)
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Astro Demo</title>
-  </head>
-  <style is:global>
-    body {
-      background: black;
-      color: white;
-    }
-  </style>
+    <ViewTransitions />
+    <style is:global>
+      body {
+        background: black;
+        color: white;
+      }
+    </style></head
+  >
+
   <body>
     <header class="flex justify-between px-8 py-2">
       <a href="/" class="text-2xl font-bold"> Astro Demo</a>
