--- a/astro/src/astro-sb/switcher.astro
+++ b/astro/src/astro-sb/switcher.astro
@@ -4,7 +4,8 @@ import Grid from "./grid.astro";
 import GridAlpine from "./grid-alpine.astro";
 import Teaser from "./teaser.astro";
 import TeaserAlpine from "./teaser-alpine.astro";
-import Feature from "./feature.astro";
+import Feature from "../react/feature"; // Feature React
+// import Feature from "./feature.astro"; // Feature astro
 import NA from "./na.astro";
 
 interface Props {
