--- a/astro/src/astro-sb/teaser.astro
+++ b/astro/src/astro-sb/teaser.astro
@@ -17,6 +17,7 @@ const { blok } = Astro.props;
   >
     <span class="text-4xl block underline pr-4 mb-4">TEASER</span>
     <RTeaser client:idle>
+      <h3>I am on the server</h3>
       <span class="text-xs font-normal leading-none absolute"
         >{blok.headline}</span
       >
