--- a/next/styles/globals.css
+++ b/next/styles/globals.css
@@ -5,5 +5,26 @@
 body {
   background: black;
   color: white;
+  margin-bottom: 4rem;
 }
 
+
+main {
+  padding: 1.5rem;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+p {
+  max-width: 70ch;
+}
+
+
+h1, h2, h3 {
+  font-weight: 700;
+}
+
+button {
+  padding: .4rem 1rem;
+  border: 1px solid white;
+}
