--- a/astro/src/storyblok/grid.astro
+++ b/astro/src/storyblok/grid.astro
@@ -1,6 +1,6 @@
 ---
-import Switcher from './switcher.astro';
-import RGrid from '../react/grid';
+import Switcher from "./switcher.astro";
+import RGrid from "../react/grid";
 
 type Blok = {
   component: string;
