--- a/astro/src/storyblok/teaser-alpine.astro
+++ b/astro/src/storyblok/teaser-alpine.astro
@@ -24,7 +24,7 @@ const { blok } = Astro.props;
     </div>
   </h1>
 </div>
-
+<!-- 
 <div>
   <h3>Plus a little show off:</h3>
   <div
@@ -49,4 +49,4 @@ const { blok } = Astro.props;
       </template>
     </ul>
   </div>
-</div>
+</div> -->
