--- a/astro/src/storyblok/feature.astro
+++ b/astro/src/storyblok/feature.astro
@@ -1,5 +1,4 @@
 ---
-// import Switcher from "./switcher.astro";
 import FeatureComp from "../react/feature";
 
 interface Props {
@@ -12,4 +11,4 @@ interface Props {
 const { blok } = Astro.props;
 ---
 
-<FeatureComp blok={blok.name} />
+<FeatureComp blok={blok} />
